--- a/lang.yml
+++ b/lang.yml
@@ -6,10 +6,17 @@ sign:
   lobby: "You have been teleported to the lobby."
   no-available: "&c[!!] Sorry, there are no available arenas!"
   registered: "The sign has been registered!"
+  no-permission: "&c[!!] You don't have permission to spectate!"
 menu:
   random-team: "Join Random Team"
   join: "Join "
   not-available: "Not Available!"
+wand:
+  magma: "&6Fire Wand"
+  teleport: "&5Ender Wand"
+  heal: "&cHealing Wand"
+  freeze: "&bIce Wand"
+  wither: "&8Wither Wand"
 items:
   crystal-shard: "&aCrystal Shard"
   small-crystal: "&bSmall Crystal"
@@ -30,6 +37,8 @@ items:
   speed: "&bSpeed Potion"
   health: "&cInstant Health"
   grenade: "&eGrenade"
+  anvil: "&7Anvil"
+  tnt: "&6TNT"
 arena:
   spectate: "You are now spectating &7%arena%&e. Use &7/cq quit&e to return."
   disabled: "&c[!!] The arena has been disabled!"
@@ -47,7 +56,7 @@ arena:
   start: "The quest will start in &7%time%"
   already-started: "&c[!!] Sorry, the arena has already started!"
   no-permission: "&c[!!] Sorry, you don't have permission to join this arena!"
-  no-commands: "&c[!!] You can't execute commands while in-game!"
+  no-commands: "&c[!!] You can't execute commands whilst in-game!"
   minute: "minute"
   minutes: "minutes"
   second: "second"
@@ -60,6 +69,7 @@ arena:
   no-perm-class: "&c[!!] You don't have permission to choose this class!"
   no-exist: "&c[!!] Sorry, this arena does not exist!"
   cant-join: "&c[!!] Sorry, you can't join this arena!"
+  not-start-teams: "&c[!!] Could not start the game. There are too few teams."
 shop:
   spend-lore1: "Spend your crystals on"
   spend-lore2: "great extras in the shop!"
@@ -69,10 +79,11 @@ broadcast:
   no-permission: "&c[!!] Sorry, you don't have permission to perform this command!"
   only-in-game: "Only in-game players can perform this command!"
 commands:
+  class: "You will get your class on your next respawn!"
   game-leave: "You left the game."
   not-in-game: "&c[!!] You are not in-game!"
   usage-money: "&c[!!] Usage: /cq money <player> <amount>"
-  couldnt-find-player: "[!!] Sorry, couldn't find this player!"
+  couldnt-find-player: "&c[!!] Sorry, couldn't find this player!"
   usage-balance: "&c[!!] Usage: /cq balance <player>"
   money: "&7%player%&e's balance is now &7%amount%&e."
   balance: "&7%player%&e's balance is &7%balance%&e."
@@ -139,6 +150,9 @@ commands:
   player-spawns: "Player Spawns:"
   crystal-spawns: "Crystal Spawns:"
   item-spawns: "Item Spawns:"
+  protected: "Protected:"
+  check-yes: "&aYes"
+  check-no: "&7No"
   check-usage: "&c[!!] Usage: /cq check <arena>"
   lobby-tp: "Teleported you to the lobby!"
   lobby-already-ingame: "&c[!!] You are already in-game!"
@@ -163,7 +177,11 @@ commands:
   invalid: "&c[!!] Invalid command! Use /cq help for a list of commands."
   spectate-error: "&c[!!] Sorry, you can't be a spectator!"
   spectate-usage: "&c[!!] Usage: /cq spectate <arena>"
+  remove-arena: "Arena &7%arena%&e has been removed!"
+  remove-usage: "&c[!!] Usage: /removearena <arena>"
+  remove-error: "&c[!!] Could not remove the arena!"
 help:
+  remove: "Deletes an arena"
   setlobby: "Set the main lobbyspawn"
   createarena: "Create a new arena"
   setname: "Give a name to an arena"
@@ -190,5 +208,6 @@ help:
   kick: "Kick a player from the game"
   money: "Set the amount of crystals a player has"
   reload: "Reloads the config.yml and the lang.yml"
+  class: "Change your class when you are in-game"
   other: "Use &d/cq help setup&e to see all setup commands."
   
