--- a/plugin.yml
+++ b/plugin.yml
@@ -1,7 +1,8 @@
 name: CrystalQuest
 main: nl.SugCube.CrystalQuest.CrystalQuest
-version: '0.3'
+version: '0.4'
 authors: [MrSugarCaney]
+softdepend: [Multiverse-Core]
 description: >
              The battle for the crystals!
 commands:
